# adb-connect-qr

./: README.md  adb_qr.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
adb_connect_qr/: main.py  qr_generator.py
src/: adb_wrapper.py  mdns_listener.py  qr_generator.py
tests/: test_adb_wrapper.py  test_mdns_listener.py  test_qr_generator.py
